--- a/.github/workflows/meeting-notes.yml
+++ b/.github/workflows/meeting-notes.yml
@@ -24,7 +24,7 @@ permissions:
 jobs:
   create:
     if: github.event_name != 'pull_request'
-    uses: Quansight-Labs/hackmd-meeting-notes-action/.github/workflows/create-meeting-notes-pr.yml@363885b
+    uses: Quansight-Labs/hackmd-meeting-notes-action/.github/workflows/create-meeting-notes-pr.yml@main
     with:
       date: ${{ inputs.date || 'now' }}
       template_path: meetings/agenda_template.md
@@ -39,7 +39,7 @@ jobs:
       HACKMD_TOKEN: ${{ secrets.HACKMD_TOKEN }}
   sync:
     if: github.event.label.name == 'sync-hackmd-notes'
-    uses: Quansight-Labs/hackmd-meeting-notes-action/.github/workflows/sync-meeting-notes-pr.yml@363885b
+    uses: Quansight-Labs/hackmd-meeting-notes-action/.github/workflows/sync-meeting-notes-pr.yml@main
     with:
       pr_number: ${{ github.event.number }}
     secrets:
