Apply suggestions from code review
Co-authored-by: Jannis Leidel <jannis@leidel.info>

--- a/teams/dynamic/constructor.yml
+++ b/teams/dynamic/constructor.yml
@@ -7,6 +7,8 @@ scopes:
         - conda/conda-pack
         - conda/constructor
         - conda/menuinst
+        - conda/conda-standalone
+        - conda/nsis-mirror
     other: null
 links:
     - https://github.com/conda/governance/issues/53
