--- a/teams/dynamic/communications.yml
+++ b/teams/dynamic/communications.yml
@@ -14,16 +14,6 @@ scopes:
 links:
     - https://github.com/conda/governance/issues/53
 users:
-    bkreider: https://github.com/conda/governance/issues/53
-    chenghlee: https://github.com/conda/governance/issues/53
-    goanpeca: https://github.com/conda/governance/issues/53
-    hmaarrfk: https://github.com/conda/governance/issues/53  # missing from team?
-    hoechenberger: https://github.com/conda/governance/issues/53
-    isuruf: https://github.com/conda/governance/issues/53
-    jaimergp: https://github.com/conda/governance/issues/53
-    jezdez: https://github.com/conda/governance/issues/53
-    larsoner: https://github.com/conda/governance/issues/53
-    marcoesters: null  # missing record of decision?
-    mcg1969: https://github.com/conda/governance/issues/53  # missing from team?
-    pseudoyim: https://github.com/conda/governance/issues/53
-    travishathaway: null  # missing record of decision?
+    tnabtaf: https://github.com/conda/governance/issues/81
+    jaimergp: https://github.com/conda/governance/issues/81
+    jezdez: https://github.com/conda/governance/issues/81
