--- a/teams/static/infrastructure.yml
+++ b/teams/static/infrastructure.yml
@@ -1,12 +1,13 @@
 # yaml-language-server: $schema=../sub-teams-schema.json
 name: infrastructure
 description: The team working on conda community infrastructure
-requirements: Any steering councile member may join without approval
+requirements: Any steering council member may join without approval
 scopes:
     codeowners:
         - conda/.github
         - conda/actions
         - conda/infrastructure
+        - conda/issue-tracker
     other: null
 links:
     - https://github.com/conda/governance/issues/84
