Add charters and emeritus

--- a/teams/dynamic/coc-committee.yml
+++ b/teams/dynamic/coc-committee.yml
@@ -1,20 +1,24 @@
 # yaml-language-server: $schema=../sub-teams-schema.json
 name: null
 description: The Code of Conduct Committee
+charter: dynamic
 requirements: null
 scopes:
     codeowners: null
-    other: null
+    other:
+        GitHub Account: https://github.com/conda-conduct
 links:
     - https://github.com/conda/governance/issues/46
     - https://github.com/conda/governance/pull/49
     - https://github.com/conda/governance/pull/121
-users:
-    beeankha: null  # missing record of decision?
+members:
+    beeankha: https://github.com/conda/governance/pull/49
     csoja: https://github.com/conda/governance/issues/46
     ericdill: https://github.com/conda/governance/issues/46
     ForgottenProgramme: https://github.com/conda/governance/issues/46
     jaimergp: https://github.com/conda/governance/pull/121
-    kathatherine: null  # missing record of decision?
+    kathatherine: https://github.com/conda/governance/pull/49
     kenodegard: https://github.com/conda/governance/issues/46
     ocefpaf: https://github.com/conda/governance/issues/46
+emeritus:
+    tnabtaf: https://github.com/conda/governance/pull/121
