--- a/pixi.toml
+++ b/pixi.toml
@@ -8,6 +8,8 @@ platforms = ["osx-arm64"]
 
 [tasks]
 vote_markdown = "python to_vote.py"
+count_votes = "python count_votes.py"
 
 [dependencies]
 python = ">=3.12.4,<3.13"
+requests = ">=2.32.3,<2.33"
