fix: pixi toml duplicate keys

--- a/pixi.toml
+++ b/pixi.toml
@@ -1,12 +1,8 @@
-[dependencies]
-python = ">=3.12.4,<3.13"
-
 [project]
 authors = ["Wolf Vollprecht <w.vollprecht@gmail.com>"]
 channels = ["conda-forge"]
-description = "Add a short description here"
 name = "governance"
-platforms = ["osx-arm64"]
+platforms = ["osx-64", "osx-arm64", "win-64" , "linux-64"]
 version = "0.1.0"
 
 [tasks]
