Skip the CSV files from codespell runs.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,7 @@ repos:
     rev: v2.3.0
     hooks:
       - id: codespell
-        args: [--write-changes]
+        args: [--write-changes, --skip="*.csv"]
   - repo: meta
     # see https://pre-commit.com/#meta-hooks
     hooks:
