Skip the CSV files from codespell runs. (#162)
* Skip the CSV files from codespell runs.

* Exclude CSVs from codespell

---------

Co-authored-by: Uwe L. Korn <uwe.korn@quantco.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,6 +49,8 @@ repos:
     rev: v2.3.0
     hooks:
       - id: codespell
+        exclude_types:
+          - csv
         args: [--write-changes]
   - repo: meta
     # see https://pre-commit.com/#meta-hooks
