--- a/teams/dynamic/coc-committee.yml
+++ b/teams/dynamic/coc-committee.yml
@@ -12,14 +12,16 @@ links:
     - https://github.com/conda/governance/issues/46
     - https://github.com/conda/governance/pull/49
     - https://github.com/conda/governance/pull/121
+    - https://github.com/conda/governance/pull/158
 members:
     beeankha: https://github.com/conda/governance/pull/49
     csoja: https://github.com/conda/governance/issues/46
+    dashagurova: https://github.com/conda/governance/pull/158
     ericdill: https://github.com/conda/governance/issues/46
     ForgottenProgramme: https://github.com/conda/governance/issues/46
     jaimergp: https://github.com/conda/governance/pull/121
     kathatherine: https://github.com/conda/governance/pull/49
     kenodegard: https://github.com/conda/governance/issues/46
-    ocefpaf: https://github.com/conda/governance/issues/46
 emeritus:
+    ocefpaf: https://github.com/conda/governance/pull/158
     tnabtaf: https://github.com/conda/governance/pull/121
