--- a/teams/dynamic/communications.yml
+++ b/teams/dynamic/communications.yml
@@ -1,21 +1,22 @@
 # yaml-language-server: $schema=../sub-teams-schema.json
 name: communications
-description: null
+description:
 charter: dynamic
-requirements: null
+requirements:
 scopes:
-    codeowners:
-        - conda/communications
-    other:
-        Discourse: https://conda.discourse.group/
-        LinkedIn: https://www.linkedin.com/company/condacommunity
-        Mastodon: https://fosstodon.org/@conda
-        Matrix (public): https://matrix.to/#/#conda-communications:matrix.org
-        X/Twitter: https://x.com/condaproject
+  codeowners:
+    - conda/communications
+  other:
+    - https://conda.discourse.group/
+    - https://www.linkedin.com/company/condacommunity
+    - https://fosstodon.org/@conda
+    - https://matrix.to/#/#conda-communications:matrix.org # public
+    - https://x.com/condaproject
+    - https://bsky.app/profile/condaproject.bsky.social
 links:
-    - https://github.com/conda/governance/issues/53
+  - https://github.com/conda/governance/issues/53
 members:
-    jaimergp: https://github.com/conda/governance/issues/81
-    jezdez: https://github.com/conda/governance/issues/81
+  jaimergp: https://github.com/conda/governance/issues/81
+  jezdez: https://github.com/conda/governance/issues/81
 emeritus:
-    tnabtaf: https://github.com/conda/governance/issues/81
+  tnabtaf: https://github.com/conda/governance/issues/81
