--- a/teams/static/cla-reviewers.yml
+++ b/teams/static/cla-reviewers.yml
@@ -4,14 +4,14 @@ description: The team reviewing incoming CLA documents
 charter: static
 requirements: All team members must only consists of steering council members for compliance reasons.
 scopes:
-    codeowners:
-        - conda/cla
-    other: null
+  codeowners:
+    - conda/cla
+  other:
 links:
-    - https://github.com/conda/governance/issues/136
+  - https://github.com/conda/governance/issues/136
 members:
-    chenghlee: https://github.com/conda/governance/issues/136
-    jaimergp: https://github.com/conda/governance/issues/136
-    jezdez: https://github.com/conda/governance/issues/136
-    travishathaway: https://github.com/conda/governance/issues/136
-emeritus: null
+  chenghlee: https://github.com/conda/governance/issues/136
+  jaimergp: https://github.com/conda/governance/issues/136
+  jezdez: https://github.com/conda/governance/issues/136
+  travishathaway: https://github.com/conda/governance/issues/136
+emeritus:
