--- a/teams/dynamic/coc-committee.yml
+++ b/teams/dynamic/coc-committee.yml
@@ -1,27 +1,27 @@
 # yaml-language-server: $schema=../sub-teams-schema.json
-name: null
+name:
 description: The Code of Conduct Committee
 charter: dynamic
-requirements: null
+requirements:
 scopes:
-    codeowners: null
-    other:
-        GitHub Account: https://github.com/conda-conduct
-        Matrix (private): https://matrix.to/#/!jLRCFFbpabFtdYvfeO:matrix.org
+  codeowners:
+  other:
+    - https://github.com/conda-conduct
+    - https://matrix.to/#/!jLRCFFbpabFtdYvfeO:matrix.org  # private
 links:
-    - https://github.com/conda/governance/issues/46
-    - https://github.com/conda/governance/pull/49
-    - https://github.com/conda/governance/pull/121
-    - https://github.com/conda/governance/pull/158
+  - https://github.com/conda/governance/issues/46
+  - https://github.com/conda/governance/pull/49
+  - https://github.com/conda/governance/pull/121
+  - https://github.com/conda/governance/pull/158
 members:
-    beeankha: https://github.com/conda/governance/pull/49
-    csoja: https://github.com/conda/governance/issues/46
-    dashagurova: https://github.com/conda/governance/pull/158
-    ericdill: https://github.com/conda/governance/issues/46
-    ForgottenProgramme: https://github.com/conda/governance/issues/46
-    jaimergp: https://github.com/conda/governance/pull/121
-    kathatherine: https://github.com/conda/governance/pull/49
-    kenodegard: https://github.com/conda/governance/issues/46
+  beeankha: https://github.com/conda/governance/pull/49
+  csoja: https://github.com/conda/governance/issues/46
+  dashagurova: https://github.com/conda/governance/pull/158
+  ericdill: https://github.com/conda/governance/issues/46
+  ForgottenProgramme: https://github.com/conda/governance/issues/46
+  jaimergp: https://github.com/conda/governance/pull/121
+  kathatherine: https://github.com/conda/governance/pull/49
+  kenodegard: https://github.com/conda/governance/issues/46
 emeritus:
-    ocefpaf: https://github.com/conda/governance/pull/158
-    tnabtaf: https://github.com/conda/governance/pull/121
+  ocefpaf: https://github.com/conda/governance/pull/158
+  tnabtaf: https://github.com/conda/governance/pull/121
