--- a/teams/project/docs.yml
+++ b/teams/project/docs.yml
@@ -2,22 +2,21 @@
 name: docs
 description: The team working on all-things docs
 charter: project
-requirements: null
+requirements:
 scopes:
-    codeowners:
-        - conda/conda
-        - conda/conda-build
-        - conda/conda-docs
-        - conda/constructor
-        - conda/infrastructure
-        - conda/menuinst
-    other: null
+  codeowners:
+    - conda/conda
+    - conda/conda-build
+    - conda/conda-docs
+    - conda/constructor
+    - conda/infrastructure
+    - conda/menuinst
+  other:
 links:
-    - https://github.com/conda/conda-docs/issues/780
+  - https://github.com/conda/conda-docs/issues/780
 members:
-    kathatherine: https://github.com/conda/conda-docs/issues/780
-    travishathaway: https://github.com/conda/conda-docs/issues/780
+  kathatherine: https://github.com/conda/conda-docs/issues/780
+  travishathaway: https://github.com/conda/conda-docs/issues/780
 emeritus:
-    jezdez: null
-    tnabtaf: null
-
+  jezdez:
+  tnabtaf:
