--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,5 @@
 [dependencies]
+pydantic = ">=2,<3"
 python = ">=3.12.4,<3.13"
 requests = ">=2.32.3,<2.33"
 
@@ -10,5 +11,7 @@ platforms = ["osx-64", "osx-arm64", "win-64", "linux-64"]
 version = "0.1.0"
 
 [tasks]
-count_votes = "python count_votes.py"
-vote_markdown = "python to_vote.py"
+collect_emails = "python scripts/collect_emails.py"
+count_votes = "python scripts/count_votes.py"
+schemas = "python scripts/schemas.py"
+vote_markdown = "python scripts/to_vote.py"
