--- a/teams/communications.yml
+++ b/teams/communications.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../sub-teams-schema.json
+# yaml-language-server: $schema=teams.schema.json
 name: communications
 description:
 charter: dynamic
