--- a/teams/docs.yml
+++ b/teams/docs.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../sub-teams-schema.json
+# yaml-language-server: $schema=teams.schema.json
 name: docs
 description: The team working on all-things docs
 charter: project
