--- a/teams/communications.yml
+++ b/teams/communications.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=teams.schema.json
 name: communications
-description:
+description: Handles communications across the organization
 charter: dynamic
 requirements:
 scopes:
