--- a/pixi.toml
+++ b/pixi.toml
@@ -1,17 +1,19 @@
-[dependencies]
-pydantic = ">=2,<3"
-python = ">=3.12.4,<3.13"
-requests = ">=2.32.3,<2.33"
-
 [project]
-authors = ["Wolf Vollprecht <w.vollprecht@gmail.com>"]
-channels = ["conda-forge"]
 name = "governance"
+authors = ["conda steering council <steering@conda.org>"]
+channels = ["conda-forge"]
 platforms = ["osx-64", "osx-arm64", "win-64", "linux-64"]
 version = "0.1.0"
+
+[dependencies]
+python = ">=3.12.4,<3.13"
+pydantic = ">=2,<3"
+requests = ">=2.32.3,<2.33"
+"ruamel.yaml" = ">=0.18,<0.19"
 
 [tasks]
 collect_emails = "python scripts/collect_emails.py"
 count_votes = "python scripts/count_votes.py"
 schemas = "python scripts/schemas.py"
 vote_markdown = "python scripts/to_vote.py"
+check_teams = "python scripts/check_teams.py"
