--- a/.github/workflows/check-teams.yml
+++ b/.github/workflows/check-teams.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
       - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
-      - run: pixi run check-teams
+      - run: pixi run check_teams
