--- a/.github/workflows/check-teams.yml
+++ b/.github/workflows/check-teams.yml
@@ -2,7 +2,7 @@ name: Teams
 
 on:
   workflow_dispatch:
-  pull_request:
+  pull_request_target:
     paths:
       - teams/*.yml
       - teams/*.yaml
@@ -16,3 +16,6 @@ jobs:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
       - uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
       - run: pixi run check_teams
+        env:
+          CONDA_ORG_WIDE_TOKEN: ${{ secrets.CONDA_ORG_WIDE_READ_ONLY }}
+          CONDA_INCUBATOR_ORG_WIDE_TOKEN: ${{ secrets.CONDA_INCUBATOR_ORG_WIDE_READ_ONLY }}
