--- a/.github/workflows/check-teams.yml
+++ b/.github/workflows/check-teams.yml
@@ -2,7 +2,7 @@ name: Teams
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     paths:
       - teams/*.yml
       - teams/*.yaml
