--- a/teams/builds-tools.yml
+++ b/teams/builds-tools.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=teams.schema.json
-name: builds-tools
+name: conda/builds-tools
 description: Team to work on conda-build and other build tools in the conda ecosystem
 charter: project
 requirements:
