--- a/teams/coc-committee.yml
+++ b/teams/coc-committee.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=teams.schema.json
-name: coc-committee
+name: conda/coc-committee
 description: The Code of Conduct Committee
 charter: dynamic
 requirements:
