--- a/teams/constructor.yml
+++ b/teams/constructor.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=teams.schema.json
-name: constructor
+name: conda/constructor
 description: The team maintaining constructor and related projects
 charter: project
 requirements:
