--- a/teams/communications.yml
+++ b/teams/communications.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=teams.schema.json
-name: communications
+name: conda/communications
 description: Handles communications across the organization
 charter: dynamic
 requirements:
