--- a/teams/docs.yml
+++ b/teams/docs.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=teams.schema.json
-name: docs
+name: conda/docs
 description: The team working on all-things docs
 charter: project
 requirements:
