move under conda/

--- a/teams/conda/coc-committee.yml
+++ b/teams/conda/coc-committee.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=teams.schema.json
+# yaml-language-server: $schema=../teams.schema.json
 name: conda/coc-committee
 description: The Code of Conduct Committee
 charter: dynamic
