--- a/teams/conda/builds-tools.yml
+++ b/teams/conda/builds-tools.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=teams.schema.json
+# yaml-language-server: $schema=../teams.schema.json
 name: conda/builds-tools
 description: Team to work on conda-build and other build tools in the conda ecosystem
 charter: project
