add Sophia to conda-pypi

--- a/teams/conda-incubator/conda-pypi.yml
+++ b/teams/conda-incubator/conda-pypi.yml
@@ -17,4 +17,5 @@ members:
   kenodegard:
   danyeaw:
   ForgottenProgramme:
+  soapy1: https://github.com/conda-incubator/conda-pypi/issues/167
 emeritus:
